# AD-Ray-Optics

./: App_CodeEditor.py  App_Interactive.py  DASH_app.py  Dash_env.yaml  Procfile  README.md  Streamlit Testing.py  Streamlit Testing2.py  default.json  requirements.txt  requirements1.txt  requirements2.txt  setup.cfg  setup.py
Examples/: Example_with_Installation_Guide.ipynb  OPTI_517_Example.ipynb  ParalellZoomLens_Example.ipynb  focalLengthDefined_doe_example.ipynb  optimize_lens_shape.ipynb
rayoptics/: environment.py
rayoptics/codev/: cmdproc.py
rayoptics/elem/: elements.py  layout.py  myFunctions.py  profiles.py  surface.py  transform.py
rayoptics/gui/: actions.py  appcmds.py  dashboards.py  util.py
rayoptics/oprops/: doe.py
rayoptics/optical/: model_typing.py  opticalmodel.py
rayoptics/parax/: firstorder.py  idealimager.py  paraxialdesign.py  specsheet.py  thirdorder.py
rayoptics/raytr/: opticalspec.py  raytrace.py  trace.py
rayoptics/seq/: medium.py  sequential.py
rayoptics/util/: line_intersection.py  misc_math.py  python_pretty_print_objects.py
visualize/: lens.py  rays.py
